creusot/tests/should_fail/prusti/invalid_state/now.stderr
error: 'now can not be used in specifications of program functions
 --> now.rs:5:9
  |
5 | fn test<'now>(x: u32) -> u32 {
  |         ^^^^

error: aborting due to 1 previous error

